<resources>
    <string name="app_name">Apple</string>
    <string name="dashboard_string_module_0">Module 0</string>
    <string name="dashboard_string_description_module_0">What is pinyin?</string>
    <string name="dashboard_string_percent_complete">0% Complete</string>
    <string name="main_string_tutor">Tutor</string>
    <string name="main_string_i">i</string>
    <string name="main_string_owl">owl</string>
    <string name="main_string_get_started">Get Started</string>
    <string name="main_string_Welcome">Welcome!</string>
    <string name="main_string_welcome_message">Tutoriowl will help you to master Mandarin\npronunciation with interactive lessons and\npractice exercises.</string>
    <string name="login_string_log">Log</string>
    <string name="login_string_in">in</string>
    <string name="login_string_description">Logging in to your account</string>
    <string name="login_string_hint_username">Username</string>
    <string name="login_string_hint_password">Password</string>
    <string name="login_string_enter">Enter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dashboard_string_greet">Goodmorning \nKhalid!</string>
    <string name="bottom_navigation_string_dashboard">Dashboard</string>
    <string name="bottom_navigation_string_performance">Performance</string>
    <string name="bottom_navigation_string_leaderboard">Leaderboard</string>
    <string name="bottom_navigation_string_practice">Practice</string>
    <string name="bottom_navigation_string_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_practice_string_initials">Initials</string>
    <string name="fragment_practice_string_practice">Practice</string>
    <string name="fragment_practice_string_pinyin_characters">Pinyin\nCharacters</string>
    <string name="fragment_practice_string_pinyin_characters_description">breaks down Chinese\ncharacters into their\nparts</string>
    <string name="fragment_practice_string_pronunciation_practice">"Let's practice your\npronunciation"</string>
    <string name="fragment_practice_string_pronunciation_practice_description">Practice your pronunciation\nhere.</string>
    <string name="fragment_initial_string_b">b</string>
    <string name="fragment_initial_string_p">p</string>
    <string name="fragment_initial_string_m">m</string>
    <string name="fragment_initial_string_f">f</string>
    <string name="fragment_initial_string_d">d</string>
    <string name="fragment_initial_string_i">i</string>
    <string name="fragment_initial_string_g">g</string>
    <string name="fragment_initial_string_k">k</string>
    <string name="fragment_initial_string_h">h</string>
    <string name="fragment_initial_string_j">j</string>
    <string name="fragment_initial_string_q">q</string>
    <string name="fragment_initial_string_x">x</string>
    <string name="fragment_initial_string_zh">zh</string>
    <string name="fragment_initial_string_ch">ch</string>
    <string name="fragment_initial_string_sh">sh</string>
    <string name="fragment_initial_string_r">r</string>
    <string name="fragment_initial_string_z">z</string>
    <string name="fragment_initial_string_c">c</string>
    <string name="fragment_initial_string_s">s</string>
    <string name="fragment_initial_string_y">y</string>
    <string name="fragment_initial_string_t">t</string>
    <string name="fragment_simple_string_a">a</string>
    <string name="fragment_simple_string_e">e</string>
    <string name="fragment_simple_string_i">i</string>
    <string name="fragment_simple_string_o">o</string>
    <string name="fragment_simple_string_u">u</string>
    <string name="fragment_simple_string_ü">ü</string>
    <string name="fragment_compound_string_ai">ai</string>
    <string name="fragment_compound_string_ei">ei</string>
    <string name="fragment_compound_string_ou">ou</string>
    <string name="fragment_compound_string_an">an</string>
    <string name="fragment_compound_string_en">en</string>
    <string name="fragment_compound_string_in">in</string>
    <string name="fragment_compound_string_un">un</string>
    <string name="fragment_compound_string_ün">ün</string>
    <string name="fragment_compound_string_iang">iang</string>
    <string name="fragment_compound_string_eng">eng</string>
    <string name="fragment_compound_string_swipe">&#60;&#32;&#32;&#32;&#32;swipe&#32;&#32;&#32;&#32;&#62;</string>
    <string name="fragment_compound_string_compound_finals">Compound Finals</string>
    <string name="fragment_initials_string_initials">Initials</string>
    <string name="fragment_simple_string_simple_finals">Simple Finals</string>
    <string name="characters_dialog_box_string_question">What do you want to know about this character?</string>
    <string name="characters_dialog_box_string_pronunciation_how">I want to know its pronunciation</string>
    <string name="characters_dialog_box_string_details">I want to know its details</string>
    <string name="characters_dialog_box_string_cancel">Cancel</string>
    <string name="characters_dialog_description_string">The \'ian\' final sounds somewhat like the English word "yen". To pronounce it, start with the \'i\' sound as in "see", add a nasal quality as in "singer", and end with the \'an\' sound as in "can".</string>
    <string name="characters_dialog_description_string_exit">Click outside to exit</string>
</resources>