<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"

    android:fitsSystemWindows="true"
    tools:openDrawer="start"

    android:background="@color/ghost_white">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:background="@color/ghost_white"
        app:subheaderColor="@color/black"
        app:itemTextColor="@color/black"
        app:itemIconTint="@color/black"
        app:itemRippleColor="@color/ghost_white"


        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"

        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/dashboard_tool_bar_top"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:title="@string/dashboard_string_greet"
            app:titleTextAppearance="@style/dashboard_string_style_greet"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        </androidx.appcompat.widget.Toolbar>
        <androidx.cardview.widget.CardView
            android:id="@+id/dashboard_card_view_module_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:cardElevation="12dp"
            app:cardCornerRadius="15dp"

            app:cardBackgroundColor="@color/metallic_violet"
            android:outlineAmbientShadowColor="@color/metallic_violet"
            android:outlineSpotShadowColor="@color/metallic_violet"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tool_bar_top"
            app:layout_constraintEnd_toEndOf="parent"

            android:layout_marginTop="50dp"
            android:layout_marginHorizontal="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@drawable/card_layout_background"

                android:layout_marginBottom="6dp"
                android:layout_marginRight="4dp">

                <TextView
                    android:id="@+id/dashboard_string_view_module_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"

                    android:text="@string/dashboard_string_module_0"
                    style="@style/dashboard_string_style_module_0"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>

                <TextView
                    android:id="@+id/dashboard_string_view_module_0_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/dashboard_string_description_module_0"
                    style="@style/dashboard_string_style_description_module_0"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_string_view_module_0"
                    app:layout_constraintBottom_toTopOf="@+id/dashboard_progress_bar_module_0"

                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp">
                </TextView>
                <ProgressBar
                    android:id="@+id/dashboard_progress_bar_module_0"

                    android:layout_width="180dp"
                    android:layout_height="6dp"

                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:progressDrawable="@drawable/dashboard_progress_bar"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/dashboard_string_view_progress_complete"

                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp">
                </ProgressBar>
                <ImageButton
                    android:id="@+id/dashboard_image_button_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/dashboard_start_button"
                    android:background="@null"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"

                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp">
                </ImageButton>
                <TextView
                    android:id="@+id/dashboard_string_view_progress_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/dashboard_string_percent_complete"
                    style="@style/dashboard_string_style_progress_complete"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dashboard_image_button_start"
                    app:layout_constraintBottom_toBottomOf="parent"

                    android:layout_marginRight="10dp">
                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>

